# rustwgql

./: Cargo.toml
src/: lib.rs  main.rs
src/databases/: db.rs
src/models/: data.rs  mod.rs
src/schemas/: data.rs
src/services/: data.rs  log_data.rs  mod.rs
